# UYALauncher

./: .gitignore  App.xaml  App.xaml.cs  CMakeLists.txt  LauncherWindow.cs  MEMORY_API.md  MainWindow.xaml  MainWindow.xaml.cs  MapUpdater.cs  PCSX2Manager.cs  PatchManager.cs  Program.cs  README.md  UYALauncher.csproj  UpdateProgressWindow.cs  Updater.cs  build-all.bat  build-installer.bat  build-launcher-new.bat  build-launcher.bat  build-updater.bat  build-webinstaller.bat  build.bat  config.cpp  config.ini.example  config_example.ini  firstrun.cpp  main.cpp  mapupdater.cpp  mapupdater.h  patches.cpp  patches.h  resource.rc
.github/workflows/: build-release.yml
core/: config.cs  mapupdater.cs  patches.cs  pcsx2.cs  theme.cs  updater.cs
include/: config.h  firstrun.h  memory.h  patches.h  pcsx2.h  updater.h
installer/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  README.md  UYALauncherSetup.csproj
launcher/: App.xaml.cs  UYALauncher.csproj  build-standalone.bat  build.bat
launcher/core/: config.cs  mapupdater.cs  patches.cs  pcsx2.cs  updater.cs
launcher/ui/: launcher.cs  settings.xaml  settings.xaml.cs  styles.xaml
src/: config.cpp  firstrun.cpp  main.cpp  mapupdater.cpp  memory.cpp  patches.cpp  pcsx2.cpp  resource.rc  updater.cpp
ui/: launcher.cs  mapupdateprogress.cs  settings.xaml  settings.xaml.cs  styles.xaml  updateprogress.cs
updater/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  update.csproj
webinstaller/: Program.cs  README.md  webinstaller.csproj
